# homelab

./: .gitattributes  .gitignore  .mise.toml  .sops.yaml  CLAUDE.md  LICENSE  README.md  Taskfile.yaml  hk.pkl  manifest
.beads/: .gitignore  config.yaml  issues.jsonl  metadata.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  labeler.yaml  labels.yaml  release.yaml  renovate.json5
.github/renovate/: autoMerge.json5  clusters.json5  customManagers.json5  grafanaDashboards.json5  groups.json5  packageRules.json5
.github/workflows/: container-build.yaml  container-fission-python-builder.yaml  devcontainer.yaml  fission-function-build.yaml  flux-check.yaml  flux-diff.yaml  helm-repository-sync.yaml  label-sync.yaml  labeler.yaml  pre-pull-images.yaml  release.yaml  renovate-config.yaml  renovate.yaml  schemas.yaml
.taskfiles/Kubernetes/: Taskfile.yaml
.taskfiles/Talos/: Taskfile.yaml
.taskfiles/architecture/: Taskfile.yaml
.taskfiles/bootstrap/: Taskfile.yaml
.taskfiles/fission/: Taskfile.yaml
.taskfiles/kubernetes/: Taskfile.yaml
kubernetes/apps/fission/functions/ics-proxy/: Dockerfile  README.md  calendars.py  configmap.yaml  externalsecret.yaml  function.yaml  httproute.yaml  kustomization.yaml  main.py  package.yaml  pyproject.toml  trigger.yaml
scripts/: apply-glance-annotations.py  flux-architecture-graph.py
talos/: controlplane.yaml.j2  machineconfig.yaml.j2  talconfig.yaml  talenv.yaml  talsecret.sops.yaml  worker.yaml.j2
terraform/: .gitignore  acl.tf  dns.tf  providers.tf  settings.tf  variables.tf  versions.tf
(+1157 files in other folders)
